--- a/templates/default/rabbitmq.config.erb
+++ b/templates/default/rabbitmq.config.erb
@@ -4,8 +4,7 @@
 [
   {rabbit, [
     {vm_memory_high_watermark, <%= node[:rabbitmq][:vm_memory_high_watermark] %>},
-    {disk_free_limit, {<%= node[:rabbitmq][:disk_free_limit] %>}},
-<% if node[:rabbitmq][:cluster_nodes].any? -%>
+    {disk_free_limit, {<%= node[:rabbitmq][:disk_free_limit] %>}}<% if node[:rabbitmq][:cluster_nodes].any? -%>,
     {cluster_nodes, [<%= node[:rabbitmq][:cluster_nodes].map { |node| "'#{node}'" }.join(", ") %>]}
 <% end -%>
   ]}
